<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_change_password"
    tools:context=".ui.change_password.ChangePasswordFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:lottie_fileName="edit_password_animation.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/oldPasswordET" />

    <EditText
        android:id="@+id/oldPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="50dp"
        android:hint="@string/type_old_password_here"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animationView" />

    <EditText
        android:id="@+id/newPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/type_new_password_here"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordET"
        app:layout_constraintEnd_toEndOf="@+id/oldPasswordET"
        app:layout_constraintStart_toStartOf="@+id/oldPasswordET" />

    <EditText
        android:id="@+id/newPasswordReTypeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_new_password_here_again"
        android:inputType="textPassword"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordET"
        app:layout_constraintEnd_toEndOf="@+id/newPasswordET"
        app:layout_constraintStart_toStartOf="@+id/newPasswordET"/>

    <Button
        style="@style/CarSharingButtonStyle"
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordReTypeET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>