<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_change_email"
    tools:context=".ui.change_email.ChangeEmailFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:lottie_scale="1"
        app:lottie_fileName="mail_animation.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/currentEmailTV" />

    <TextView
        android:id="@+id/currentEmailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_email_info"
        android:textSize="@dimen/bigTextSize"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintBottom_toTopOf="@+id/currentEmailTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/currentEmailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textSize="@dimen/bigTextSize"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintBottom_toTopOf="@+id/attentionTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/attentionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attentionChangeEmail"
        android:textSize="@dimen/smallTextSize"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/currentEmailTV"
        app:layout_constraintBottom_toTopOf="@+id/newEmailET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/newEmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_new_e_mail_here"
        app:layout_constraintTop_toBottomOf="@+id/attentionTV"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/CarSharingButtonStyle"
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/newEmailET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>