<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.ReservationFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:lottie_fileName="qr_scanner_animation.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/timeFromTV" />

    <TextView
        android:id="@+id/timeFromTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_info"
        android:textSize="@dimen/text_size_22"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/animationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        style="@style/CarSharingButtonStyle"
        android:id="@+id/rentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/rentAndScanQRCode"
        app:layout_constraintTop_toBottomOf="@+id/timeFromTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        style="@style/CarSharingButtonStyle"
        android:id="@+id/endButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endReservation"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rentButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>