<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.ReservationFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="0dp"
        app:lottie_fileName="car.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/currentDistanceTV" />

    <TextView
        android:id="@+id/currentDistanceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textSize="@dimen/text_size_22"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintBottom_toTopOf="@id/layoutSummaryTime" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutSummaryTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/currentDistanceTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutSummaryDistance">

        <ImageView
            android:id="@+id/timeIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center"
            app:srcCompat="@drawable/icon_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timeTV"/>

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/text_size_16"
            android:gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutSummaryDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layoutSummaryPrice"
        app:layout_constraintTop_toBottomOf="@+id/layoutSummaryTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/distanceIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            app:srcCompat="@drawable/icon_road"/>

        <TextView
            android:id="@+id/distanceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hello_blank_fragment"
            android:textSize="@dimen/text_size_16"
            android:gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutSummaryPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/endButton"
        app:layout_constraintTop_toBottomOf="@+id/layoutSummaryDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/priceIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            app:srcCompat="@drawable/icon_price"/>

        <TextView
            android:id="@+id/priceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hello_blank_fragment"
            android:textSize="@dimen/text_size_16"
            android:gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        style="@style/CarSharingButtonStyle"
        android:id="@+id/endButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endRent"
        android:textSize="@dimen/bigTextSize"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutSummaryPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>